Closed Bug 1704357 Opened 3 years ago Closed 3 years ago

Perma gecko/js/src/builtin/TestingFunctions.cpp:7385:39: error: use of undeclared identifier 'CreateShapeSnapshot' when Gecko 89 merges to Beta on 2021-04-19

Categories

(Core :: JavaScript: Standard Library, defect)

Firefox 89
defect

Tracking

()

VERIFIED FIXED
89 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox87 --- unaffected
firefox88 --- unaffected
firefox89 + verified

People

(Reporter: malexandru, Assigned: jandem)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Central-as-early-beta simulation, how to run these simulations.
Failure log, raw log.

[task 2021-04-11T10:39:12.371Z] 10:39:12     INFO -  make[4]: Entering directory '/builds/worker/workspace/obj-build/js/src'
[task 2021-04-11T10:39:12.375Z] 10:39:12     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot -std=gnu++17 -o Unified_cpp_js_src3.o -c  -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -DNDEBUG=1 -DTRIMMED=1 -DWASM_SUPPORTS_HUGE_MEMORY -DJS_HAS_CTYPES -DFFI_BUILDING -DEXPORT_JS_API -DMOZ_HAS_MOZGLUE -I/builds/worker/checkouts/gecko/js/src -I/builds/worker/workspace/obj-build/js/src -I/builds/worker/workspace/obj-build/js/src/ctypes/libffi/include -I/builds/worker/checkouts/gecko/js/src/ctypes/libffi/src/x86 -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/js/src/js-confdefs.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Werror=non-literal-null-conversion -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-error=deprecated-copy -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Wno-psabi -Wno-unknown-warning-option -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fsanitize=bool,bounds,enum,integer-divide-by-zero,object-size,pointer-overflow,return,vla-bound -fno-sanitize-recover=bool,bounds,enum,integer-divide-by-zero,object-size,pointer-overflow,return,vla-bound -fsanitize-blacklist=/builds/worker/workspace/obj-build/ubsan_blacklist.txt -fsanitize=address -fcrash-diagnostics-dir=/builds/worker/artifacts -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O2 -gline-tables-only -fno-omit-frame-pointer -funwind-tables -Werror -fno-strict-aliasing -Werror=format -Wno-shadow -fexperimental-new-pass-manager  -MD -MP -MF .deps/Unified_cpp_js_src3.o.pp   Unified_cpp_js_src3.cpp
[task 2021-04-11T10:39:12.377Z] 10:39:12     INFO -  In file included from Unified_cpp_js_src3.cpp:2:
[task 2021-04-11T10:39:12.379Z] 10:39:12    ERROR -  /builds/worker/checkouts/gecko/js/src/builtin/TestingFunctions.cpp:7385:39: error: use of undeclared identifier 'CreateShapeSnapshot'
[task 2021-04-11T10:39:12.379Z] 10:39:12     INFO -      JS_FN_HELP("createShapeSnapshot", CreateShapeSnapshot, 1, 0,
[task 2021-04-11T10:39:12.379Z] 10:39:12     INFO -                                        ^
[task 2021-04-11T10:39:12.379Z] 10:39:12    ERROR -  /builds/worker/checkouts/gecko/js/src/builtin/TestingFunctions.cpp:7390:38: error: use of undeclared identifier 'CheckShapeSnapshot'
[task 2021-04-11T10:39:12.379Z] 10:39:12     INFO -      JS_FN_HELP("checkShapeSnapshot", CheckShapeSnapshot, 2, 0,
[task 2021-04-11T10:39:12.379Z] 10:39:12     INFO -                                       ^
[task 2021-04-11T10:39:12.379Z] 10:39:12     INFO -  2 errors generated.
[task 2021-04-11T10:39:12.379Z] 10:39:12    ERROR -  make[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:676: Unified_cpp_js_src3.o] Error 1
[task 2021-04-11T10:39:12.379Z] 10:39:12     INFO -  make[4]: Leaving directory '/builds/worker/workspace/obj-build/js/src'
[task 2021-04-11T10:39:12.380Z] 10:39:12     INFO -  make[4]: *** Waiting for unfinished jobs....
[task 2021-04-11T10:39:12.380Z] 10:39:12     INFO -  make[4]: Entering directory '/builds/worker/workspace/obj-build/netwerk/dns'
[task 2021-04-11T10:39:12.380Z] 10:39:12     INFO -  netwerk/dns/nsHostResolver.o
[task 2021-04-11T10:39:12.380Z] 10:39:12     INFO -  make[4]: Leaving directory '/builds/worker/workspace/obj-build/netwerk/dns'

Jan, this looks to be caused by the changes in Bug 1702196, could you please take a look?

Assignee: nobody → jdemooij
Status: NEW → ASSIGNED
Flags: needinfo?(jdemooij)
Pushed by jdemooij@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/bd65916b4e71
Move testing functions outside JS_TRACE_LOGGING ifdef. r=jonco
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
Keywords: regression
Regressed by: 1702196
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: