Bug 1704357 - Move testing functions outside JS_TRACE_LOGGING ifdef. r=jonco

Differential Revision: https://phabricator.services.mozilla.com/D111582